#correct vite; minor fixes; tested auth page

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -2,6 +2,7 @@
 @import './mixins';
 @import './variables';
 @import './classes';
+@import 'iss-ui-kit/dist/iss-ui-kit.css';
 
 :root {
   font-family: Golos;
