--- a/src/assets/scss/mixins.scss
+++ b/src/assets/scss/mixins.scss
@@ -126,6 +126,7 @@
   border: 1px solid var(--borders-neutral, #212834);
   border-radius: 8px;
   transform: translateY(100%);
+  z-index: 9999;
 
   &::-webkit-scrollbar {
     width: 2px;
